--- a/4-Axios基本使用/01-axios基本使用.html
+++ b/4-Axios基本使用/01-axios基本使用.html
@@ -7,7 +7,7 @@
     <title>axios基本使用</title>
 </head>
 <body>
-    <div id="appss">
+    <div id="app">
 
     </div>
     <script src="./vue.js"></script>
@@ -32,7 +32,7 @@
         }
         Vue.prototype.$axios = axios;
         new Vue({
-            el:'#appss',
+            el:'#app',
             data(){
                 return {
 
