--- a/4-Axios基本使用/01-axios基本使用.html
+++ b/4-Axios基本使用/01-axios基本使用.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <div id="app">
-
+        
     </div>
     <script src="./vue.js"></script>
+    
     <script src="./node_modules/axios/dist/axios.js"></script>
     <script>
         console.log(axios);
         var App = {
             template:`
-                <button @click='sendAjax'></button>
+                <div>
+                    <button @click='sendAjax'></button>
+                    <p>入口组件</p>
+                </div>
             `,
             methods:{
                 sendAjax(){
