--- a/4-Axios基本使用/01-axios基本使用.html
+++ b/4-Axios基本使用/01-axios基本使用.html
@@ -19,7 +19,7 @@
             template:`
                 <div>
                     <button @click='sendAjax'></button>
-                    <p>入口组件</p>
+                    <p>入口组件master</p>
                 </div>
             `,
             methods:{
