--- a/4-Axios基本使用/01-axios基本使用.html
+++ b/4-Axios基本使用/01-axios基本使用.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>axios基本使用</title>
 </head>
+
 <body>
     <div id="app">
-        
+
     </div>
     <script src="./vue.js"></script>
-    
+
     <script src="./node_modules/axios/dist/axios.js"></script>
     <script>
         console.log(axios);
         var App = {
-            template:`
+            template: `
                 <div>
                     <button @click='sendAjax'></button>
                     <p>入口组件master</p>
                 </div>
             `,
-            methods:{
-                sendAjax(){
-                    this.$axios.get('http://127.0.0.1:8888/')
-                    .then(res=>{
-                        console.log(res);
-                    })
-                    .catch(err=>{
-                        console.log(err);
-                    })
+            methods: {
+                sendAjax() {
+                    this.$axios.get('http://localhost:8888')
+                        .then(res => {
+                            console.log(res.data.msg);
+                        })
+                        .catch(err => {
+                            console.log(err);
+                        })
                 }
             }
         }
         Vue.prototype.$axios = axios;
         new Vue({
-            el:'#app',
-            data(){
+            el: '#app',
+            data() {
                 return {
 
                 }
             },
-            components:{
+            components: {
                 App
             },
-            template:`
+            template: `
                 <App />
             `
         })
     </script>
 </body>
+
 </html>
